tests/NormalTests/paczka1/small_fuzzy/13779386.err
Error in line 5: wFhse9n S184 13,2
Error in line 16: mFnh1xS8UC S396 40,99
